# Zine

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
concept/: Zine.md  home.html
config/: solid-app.d.ts  webpack.config.js
public/: index.html
src/: .babelrc  App.tsx  index.tsx  tsconfig.json
src-old/backends/: backends.ts
src-old/backends/matrix/: index.ts
src-old/ui/components/: Channel.tsx  ChannelList.tsx
src-old/ui/pages/: Home.tsx  Login.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/backend-old/: backend.ts  backends.ts  datadir.ts
src/backend-old/matrix/: index.ts
src/backend/matrix/: matrix.ts
src/backends/: backend.ts  backends.ts
src/backends/matrix/: index.ts
src/components/home/NetworkList/: NetworkList.module.css  index.tsx
src/components/home/NetworkList/Space/: Space.module.css  index.tsx
src/components/home/RoomList/: RoomList.module.css  UserInfo.module.css  index.tsx
src/components/home/RoomList/Category/: Category.module.css  index.tsx
src/components/home/RoomList/Room/: Room.module.css  index.tsx
src/components/home/RoomList/UserInfo/: UserInfo.module.css  index.tsx
src/components/login/dialog/: index.tsx  style.module.css
src/css/: index.css
src/ui/: app.tsx  routes.tsx
src/ui/components/: ChannelList.tsx  MainChatArea.tsx
src/ui/pages/: About.tsx  Home.css  Home.tsx
src/views/: Login.css  Login.module.css  Login.tsx
src/views/Home/: Home.module.css  index.tsx
src/views/Login/: Login.module.css  index.tsx
