[package]
name = "zine"
version = "2.0.0"
description = "Simple matrix client"
authors = [ "Firstbober" ]
license = "Apache-2.0"
repository = "https://github.com/Firstbober/Zine"
default-run = "zine"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "zine"
path = "src/main.rs"
